[gd_scene load_steps=24 format=3 uid="uid://bylnvutdpamas"]

[ext_resource type="Script" uid="uid://btu6yrs1o2gi0" path="res://gui/menu/scripts/opções.gd" id="1_12uyd"]
[ext_resource type="Shader" uid="uid://4xfcmwbgytvo" path="res://gui/menu/scripts/particulas.gdshader" id="2_hyomx"]
[ext_resource type="FontFile" uid="uid://cgswncuhvcmy6" path="res://fonts/PixelifySans-VariableFont_wght.ttf" id="2_q6fm1"]
[ext_resource type="Texture2D" uid="uid://dq6yfu3naj301" path="res://gui/menu/img/particulas-fundo-menu.png" id="3_6focj"]
[ext_resource type="Texture2D" uid="uid://dk2y2c7dfwmmr" path="res://gui/menu/img/botão com mouse.png" id="3_8ydq0"]
[ext_resource type="Texture2D" uid="uid://dilcxp31wi5xv" path="res://gui/menu/img/Botão menu.png" id="4_hyomx"]
[ext_resource type="PackedScene" uid="uid://c8ax3u5ckj3ct" path="res://gui/menu/effect/switch.tscn" id="5_6focj"]
[ext_resource type="AudioStream" uid="uid://8wuo13ue5vf7" path="res://audios/select.wav" id="6_q6fm1"]

[sub_resource type="Gradient" id="Gradient_h0tj4"]
colors = PackedColorArray(0.184314, 0.219608, 0.596078, 1, 0.196078, 0.705882, 0.352941, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8f3c0"]
gradient = SubResource("Gradient_h0tj4")
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ingiq"]
texture = SubResource("GradientTexture2D_8f3c0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u40f7"]
shader = ExtResource("2_hyomx")
shader_parameter/direction = Vector2(-1, -1)
shader_parameter/speed = 0.15
shader_parameter/transparency = 0.45

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b5d6l"]
texture = ExtResource("3_6focj")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjmpo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gy3qh"]
texture = ExtResource("3_8ydq0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f5a5b"]
texture = ExtResource("4_hyomx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_du76g"]
texture = ExtResource("4_hyomx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_epbfq"]
texture = ExtResource("3_8ydq0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kksc1"]
texture = ExtResource("4_hyomx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ok453"]
texture = ExtResource("4_hyomx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_axjqn"]
texture = ExtResource("3_8ydq0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntw1b"]
texture = ExtResource("4_hyomx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f5621"]
texture = ExtResource("4_hyomx")

[node name="opções" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12uyd")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ingiq")
metadata/_edit_use_anchors_ = true

[node name="Particles" type="Panel" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_u40f7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_b5d6l")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.618
anchor_right = 0.5
anchor_bottom = 0.618
offset_left = -257.0
offset_top = -241.96
offset_right = 257.0
offset_bottom = 69.04
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Audio" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_q6fm1")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjmpo")
theme_override_styles/hover = SubResource("StyleBoxTexture_gy3qh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f5a5b")
theme_override_styles/normal = SubResource("StyleBoxTexture_du76g")
text = "AUDIO
"
icon_alignment = 1

[node name="Controlls" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_q6fm1")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjmpo")
theme_override_styles/hover = SubResource("StyleBoxTexture_epbfq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kksc1")
theme_override_styles/normal = SubResource("StyleBoxTexture_ok453")
text = "CONTROLES"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_q6fm1")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjmpo")
theme_override_styles/hover = SubResource("StyleBoxTexture_axjqn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ntw1b")
theme_override_styles/normal = SubResource("StyleBoxTexture_f5621")
text = "VOLTAR"

[node name="Switch" parent="." instance=ExtResource("5_6focj")]
stream = ExtResource("6_q6fm1")

[connection signal="pressed" from="VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="VBoxContainer/Controlls" to="." method="_on_controlls_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
